--- a/Task2.html
+++ b/Task2.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: #f0f8ff;
+            background-color: #748ea4;
         }
         input, button {
             padding: 10px;
