--- a/Task2.html
+++ b/Task2.html
@@ -3,23 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guessing Game</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #748ea4;
-        }
-        input, button {
-            padding: 10px;
-            margin-top: 10px;
-            font-size: 16px;
-        }
-        .result, .best-score {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="Style2.css">
 </head>
 <body>
 
@@ -69,7 +53,6 @@
                     updateBestScoreDisplay();
                 }
 
-                // Prepare for new round
                 randomNumber = Math.floor(Math.random() * 100) + 1;
                 attempts = 0;
             }
@@ -87,4 +70,5 @@
 
 </body>
 </html>
+
 
